--- a/GithubTest/src/main/res/layout/activity_main.xml
+++ b/GithubTest/src/main/res/layout/activity_main.xml
@@ -1,16 +1,15 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        >
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
-</RelativeLayout>
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/hello_android"
+            android:id="@+id/textView"
+            android:layout_marginTop="60dp"
+            android:textSize="20dp"
+            android:layout_weight="1.73"/>
+</LinearLayout>
